--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,5 +8,14 @@
 <body>
     <h1>LOGIN</h1>
     <p>Diario de Bordo</p>
+
+    <form action="/login" method="post">
+        <label for="username">Id de Usuário:</label>
+        <input type="text" id="username" name="username">
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password">
+        <button type="submit">Entrar</button>
+    </form>
+
 </body>
 </html>
