divided menu into menuMotorista and menuAdm

--- a/views/menuMotorista.ejs
+++ b/views/menuMotorista.ejs
@@ -6,7 +6,7 @@
     <title>Diário de Bordo</title>
 </head>
 <body>
-    <h1>Menu de opções</h1>
-    <p>Olá usuário, o que deseja fazer:</p>
+    <h1>Menu de opções do Motorista</h1>
+    <p>Olá Motorista, o que deseja fazer:</p>
 </body>
 </html>
