added the voltar button to all pages

--- a/views/gerenciar_motoristas.ejs
+++ b/views/gerenciar_motoristas.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Gerenciar Motoristas</h1>
-    
+    <button onclick="location.href='/login'">Voltar</button>
 </body>
 </html>
