--- a/views/adicionar_chegada.ejs
+++ b/views/adicionar_chegada.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Adicionar chegada</h1>
-    
+    <button onclick="location.href='/login'">Voltar</button>
 </body>
 </html>
