--- a/views/gerenciar_veiculos.ejs
+++ b/views/gerenciar_veiculos.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Gerenciar Veículos</h1>
-    
+    <button onclick="location.href='/login'">Voltar</button>
 </body>
 </html>
