--- a/views/historico.ejs
+++ b/views/historico.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Historico de viagens/Log de viagens</h1>
-    
+    <button onclick="location.href='/menuAdm'">Voltar</button>
 </body>
 </html>
