--- a/views/menuAdm.ejs
+++ b/views/menuAdm.ejs
@@ -13,5 +13,6 @@
     <button onclick="location.href='/historico'">Histórico</button>
     <button onclick="location.href='/adicionar_saida'">Adicionar Saída</button>
     <button onclick="location.href='/adicionar_chegada'">Adicionar Chegada</button>
+    <button onclick="location.href='/login'">Voltar</button>
 </body>
 </html>
