new paths and renamed files to fit the RESTful naming conventions

--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Historico de viagens/Log de viagens</h1>
-    <button onclick="location.href='/motoristas/menuAdm'">Voltar</button>
+    <button onclick="location.href='/motoristas/menu-adm'">Voltar</button>
 </body>
 </html>
