changed the hello message using <%= user.nome %> so as to show the user name on screen

--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Menu de opções do administrador</h1>
-    <p>Olá ADM, selecione o que deseja fazer:</p>
+    <p>Olá <%= user.nome %>, selecione o que deseja fazer:</p>
     <button onclick="location.href='../veiculos/gerenciar-veiculos'">Gerenciar Veículos</button>
     <button onclick="location.href='/motoristas/gerenciar-motoristas'">Gerenciar Motoristas</button>
     <button onclick="location.href='../viagens/historico'">Histórico</button>
