--- a/views/motoristas/menu-motorista.ejs
+++ b/views/motoristas/menu-motorista.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Menu de opções do Motorista</h1>
-    <p>Olá Motorista, o que deseja fazer:</p>
+    <p>Olá <%= user.nome %>, selecione o que deseja fazer:</p>
     <button onclick="location.href='../viagens/adicionar-saida'">Adicionar Saída</button>
     <button onclick="location.href='../viagens/adicionar-chegada'">Adicionar Chegada</button>
     <button onclick="location.href='/login'">Voltar</button>
