fixed misspelling of itineratio label

--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -25,7 +25,7 @@
             <% }); %>
         </select>
 
-        <label for="itineratio">Itineratio:</label>
+        <label for="itineratio">Itinerário:</label>
         <input type="text" id="itineratio" name="itineratio">
 
         <label for="km_inicial">Quilometragem Inicial:</label>
