added the required property and the 'servico" field

--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -26,13 +26,16 @@
         </select>
 
         <label for="itineratio">Itinerário:</label>
-        <input type="text" id="itineratio" name="itineratio">
+        <input type="text" id="itineratio" name="itineratio" required>
+
+        <label for="servico">Serviço:</label>
+        <input type="text" id="servico" name="servico" required>
 
         <label for="km_inicial">Quilometragem Inicial:</label>
-        <input type="integer" id="km_inicial" name="km_inicial">
+        <input type="integer" id="km_inicial" name="km_inicial" required>
 
         <label for="hora_inicial">Data e hora de Saída:</label>
-        <input type="datetime" id="hora_inicial" name="hora_inicial">
+        <input type="datetime" id="hora_inicial" name="hora_inicial" required>
         
         <button type="submit">Confirmar</button>
     </form>
