--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -12,15 +12,13 @@
         <input type="text" id="name" name="name" value="<%= user.nome %>" readonly>
         <label for="username">Id de Usuário:</label>
         <input type="text" id="username" name="username" value="<%= user.login %>" readonly>
-        <label for="veiculo">Id de Usuário:</label>
-        <input type="text" id="veiculo" name="veiculo" readonly>
         
         <!-- Dropdown list para veículos -->
         <label for="veiculo">Selecione o veículo:</label>
         <select name="veiculo_ID" id="veiculo">
             <% veiculos.forEach(function(veiculo) { %>
                 <option value="<%= veiculo.veiculo_ID %>">
-                    <%= veiculo.marca %> - <%= veiculo.placa %>
+                    <%= veiculo.marca %> - <%= veiculo.modelo %> - <%= veiculo.placa %>
                 </option>
             <% }); %>
         </select>
