--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -32,7 +32,7 @@
         <label for="name">Nome:</label>
         <input type="text" id="name" name="name" value="<%= user.nome %>"readonly>
         <label for="username">Id de Usuário:</label>
-        <input type="text" id="username" name="username" value="<%= user.login %>"readonly>
+        <input type="text" id="username" name="username" value="<%= user.usuario_ID %>"readonly>
 
         <label for="kmChegada">Quilometragem final:</label>
         <input type="number" id="kmChegada" name="kmChegada" required>
