--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -4,18 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diário de Bordo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .header, .footer {
+            background-color: #5f5f5f; /* Fundo cinza */
+            height: 50px; /* Altura do cabeçalho e rodapé */
+            line-height: 50px; /* Alinhamento vertical do texto */
+            text-align: center; /* Centralização do texto */
+        }
+    </style>
 </head>
 <body>
-    <h1>Menu de opções do administrador</h1>
-    <p>Olá <%= user.nome %>, selecione o que deseja fazer:</p>
+    <!-- Header -->
+    <header class="header">
+        <h1>Menu de opções do administrador</h1>
+    </header>
+
+    <p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p>
     <button onclick="location.href='../veiculos/gerenciar-veiculos'">Gerenciar Veículos</button>
     <button onclick="location.href='/motoristas/gerenciar-motoristas'">Gerenciar Motoristas</button>
     <button onclick="location.href='../viagens/historico'">Histórico</button>
     <button onclick="location.href='../viagens/adicionar-saida'">Adicionar Saída</button>
     <button onclick="location.href='../viagens/adicionar-chegada'">Adicionar Chegada</button>
     <button onclick="location.href='/login'">Voltar</button>
+
+ <!-- Footer -->
+ <footer class="footer">
+    <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
