--- a/views/motoristas/menu-motorista.ejs
+++ b/views/motoristas/menu-motorista.ejs
@@ -4,37 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diário de Bordo</title>
-   
-     <!-- Bootstrap CSS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
         .header, .footer {
-            background-color: #5f5f5f; /* Fundo cinza */
-            height: 50px; /* Altura do cabeçalho e rodapé */
-            line-height: 50px; /* Alinhamento vertical do texto */
-            text-align: center; /* Centralização do texto */
+            background-color: #5f5f5f;
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+        }
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            max-width: 500px;
+            margin: 0 auto;
+            padding-top: 20px;
+        }
+        .btn {
+            margin-bottom: 10px;
+            width: 80%; /* Aumenta a largura dos botões */
+            padding: 20px; /* Aumenta a altura dos botões */
+            font-size: 18px; /* Aumenta o tamanho da fonte dos botões */
         }
     </style>
-
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <h1>Menu de opções do Motorista</h1>
     </header>
+    <div class="container">
+        <p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'">Adicionar Saída</button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'">Adicionar Chegada</button>
+        <button class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
+    </footer>
+
     
-    <p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p>
-    <button  class="btn btn-secondary"onclick="location.href='../viagens/adicionar-saida'">Adicionar Saída</button>
-    <button  class="btn btn-secondary"onclick="location.href='../viagens/adicionar-chegada'">Adicionar Chegada</button>
-    <button onclick="location.href='/login'">Voltar</button>
-
- <!-- Footer -->
- <footer class="footer">
-    <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
-</footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
