--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -3,23 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adiconar chegada</title>
+    <title>Adicionar chegada</title>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
         .header, .footer {
             background-color: #5f5f5f; /* Fundo cinza */
             height: 50px; /* Altura do cabeçalho e rodapé */
             line-height: 50px; /* Alinhamento vertical do texto */
             text-align: center; /* Centralização do texto */
         }
-
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            max-width: 500px;
+            margin: 0 auto;
+            padding-top: 20px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .btn-primary {
+            display: block;
+            width: 100%;
+        }
+        button[type="submit"], button[type="button"] {
+            margin-bottom: 10px;
+        }
     </style>
 
     <script>
         function salvarDados() {
             const kmChegada = document.getElementById('kmChegada').value;
             const dataChegada = document.getElementById('dataChegada').value;
+            const usuario_ID = document.getElementById('usuario_ID').value;
 
             fetch('/viagem/adicionar-chegada', {
                 method: 'POST',
@@ -28,10 +56,10 @@
                 },
                 body: JSON.stringify({
                     kmChegada,
-                    dataChegada
+                    dataChegada,
+                    usuario_ID
                 }),
             })
-        
             .catch(error => {
                 console.error('Erro ao salvar dados de chegada:', error);
             });
@@ -43,30 +71,34 @@
     <header class="header">
         <h1>Adicionar Chegada</h1>
     </header>
-    <form action="javascript:salvarDados()" method="post">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" value="<%= user.nome %>"readonly>
-        <label for="username">Login:</label>
-        <input type="text" id="username" name="username" value="<%= user.login %>" readonly>
-        <input type="hidden" id="usuario_ID" name="usuario_ID" value="<%= user.usuario_ID %>">
-
-        <label for="kmChegada">Quilometragem final:</label>
-        <input type="number" id="kmChegada" name="kmChegada" required>
-
-        <label for="dataChegada">Data e hora de Chegada:</label>
-        <input type="datetime-local" id="dataChegada" name="dataChegada" required>
-
-        <button type="submit">Confirmar</button>
-    </form>
-    <button onclick="location.href='/login'">Voltar</button>
-
+    <div class="container">
+        <form action="javascript:salvarDados()" method="post">
+            <div class="form-group">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" class="form-control" value="<%= user.nome %>" readonly>
+            </div>
+            <div class="form-group">
+                <label for="username">Login:</label>
+                <input type="text" id="username" name="username" class="form-control" value="<%= user.login %>" readonly>
+                <input type="hidden" id="usuario_ID" name="usuario_ID" value="<%= user.usuario_ID %>">
+            </div>
+            <div class="form-group">
+                <label for="kmChegada">Quilometragem final:</label>
+                <input type="number" id="kmChegada" name="kmChegada" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="dataChegada">Data e hora de Chegada:</label>
+                <input type="datetime-local" id="dataChegada" name="dataChegada" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Confirmar</button>
+        </form>
+        <button type="button" class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+    </div>
     <!-- Footer -->
     <footer class="footer">
         <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    
 </body>
 </html>
