--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -6,12 +6,40 @@
     <title>Adicionar saída</title>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
         .header, .footer {
             background-color: #5f5f5f; /* Fundo cinza */
             height: 50px; /* Altura do cabeçalho e rodapé */
             line-height: 50px; /* Alinhamento vertical do texto */
             text-align: center; /* Centralização do texto */
+        }
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            max-width: 500px;
+            margin: 0 auto;
+            padding-top: 20px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .btn-primary {
+            display: block;
+            width: 100%;
+        }
+        button[type="submit"], button[type="button"] {
+            margin-bottom: 10px;
         }
     </style>
 
@@ -38,7 +66,6 @@
                     usuario_ID
                 }),
             })
-          
             .catch(error => {
                 console.error('Erro ao salvar dados de saída:', error);
             });
@@ -57,64 +84,68 @@
     </script>
 </head>
 <body>
-   <!-- Header -->
-   <header class="header">
-    <h1>Adicionar Saída</h1>
-</header>
-    <form action="javascript:salvarDados()" method="post">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" value="<%= user.nome %>" readonly>
-        <label for="username">Login:</label>
-        <input type="text" id="username" name="username" value="<%= user.login %>" readonly>
-        <input type="hidden" id="usuario_ID" name="usuario_ID" value="<%= user.usuario_ID %>">
-        
-        <!-- Dropdown list para veículos -->
-        <label for="veiculo">Selecione o veículo:</label>
-        <select name="veiculo_ID" id="veiculo">
-            <% veiculos.forEach(function(veiculo) { %>
-                <option value="<%= veiculo.veiculo_ID %>">
-                    <%= veiculo.marca %> - <%= veiculo.modelo %> - <%= veiculo.placa %>
-                </option>
-            <% }); %>
-        </select>
-
-        <!-- Dropdown list para itinerário -->
-        <label for="itinerario">Itinerário:</label>
-        <select id="itinerario" name="itinerario" required onchange="mostrarCampoOutro(this, 'novoItinerario')">
-            <% itinerarios.forEach(function(itinerario) { %>
-                <option value="<%= itinerario %>"><%= itinerario %></option>
-            <% }); %>
-            <option value="Outro">Outro</option>
-        </select>
-        <input type="text" id="novoItinerario" name="novoItinerario" placeholder="Digite o novo itinerário" style="display: none;">
-
-        <!-- Dropdown list para serviço -->
-        <label for="servico">Serviço:</label>
-        <select id="servico" name="servico" required onchange="mostrarCampoOutro(this, 'novoServico')">
-            <% servicos.forEach(function(servico) { %>
-                <option value="<%= servico %>"><%= servico %></option>
-            <% }); %>
-            <option value="Outro">Outro</option>
-        </select>
-        <input type="text" id="novoServico" name="novoServico" placeholder="Digite o novo serviço" style="display: none;">
-
-        <label for="kmSaida">Quilometragem Inicial:</label>
-        <input type="number" id="kmSaida" name="kmSaida" required>
-
-        <label for="dataSaida">Data e hora de Saída:</label>
-        <input type="datetime-local" id="dataSaida" name="dataSaida" required>
-        
-        <button type="button" onclick="salvarDados()">Confirmar</button>
-    </form>
-    <button onclick="location.href='/login'">Voltar</button>
-
+    <!-- Header -->
+    <header class="header">
+        <h1>Adicionar Saída</h1>
+    </header>
+    <div class="container">
+        <form action="javascript:salvarDados()" method="post">
+            <div class="form-group">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" class="form-control" value="<%= user.nome %>" readonly>
+            </div>
+            <div class="form-group">
+                <label for="username">Login:</label>
+                <input type="text" id="username" name="username" class="form-control" value="<%= user.login %>" readonly>
+                <input type="hidden" id="usuario_ID" name="usuario_ID" value="<%= user.usuario_ID %>">
+            </div>
+            <div class="form-group">
+                <label for="veiculo">Selecione o veículo:</label>
+                <select name="veiculo_ID" id="veiculo" class="form-control">
+                    <% veiculos.forEach(function(veiculo) { %>
+                        <option value="<%= veiculo.veiculo_ID %>">
+                            <%= veiculo.marca %> - <%= veiculo.modelo %> - <%= veiculo.placa %>
+                        </option>
+                    <% }); %>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="itinerario">Itinerário:</label>
+                <select id="itinerario" name="itinerario" class="form-control" required onchange="mostrarCampoOutro(this, 'novoItinerario')">
+                    <% itinerarios.forEach(function(itinerario) { %>
+                        <option value="<%= itinerario %>"><%= itinerario %></option>
+                    <% }); %>
+                    <option value="Outro">Outro</option>
+                </select>
+                <input type="text" id="novoItinerario" name="novoItinerario" class="form-control" placeholder="Digite o novo itinerário" style="display: none;">
+            </div>
+            <div class="form-group">
+                <label for="servico">Serviço:</label>
+                <select id="servico" name="servico" class="form-control" required onchange="mostrarCampoOutro(this, 'novoServico')">
+                    <% servicos.forEach(function(servico) { %>
+                        <option value="<%= servico %>"><%= servico %></option>
+                    <% }); %>
+                    <option value="Outro">Outro</option>
+                </select>
+                <input type="text" id="novoServico" name="novoServico" class="form-control" placeholder="Digite o novo serviço" style="display: none;">
+            </div>
+            <div class="form-group">
+                <label for="kmSaida">Quilometragem Inicial:</label>
+                <input type="number" id="kmSaida" name="kmSaida" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="dataSaida">Data e hora de Saída:</label>
+                <input type="datetime-local" id="dataSaida" name="dataSaida" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Confirmar</button>
+        </form>
+        <button type="button" class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+    </div>
     <!-- Footer -->
     <footer class="footer">
         <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    
 </body>
 </html>
