--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -34,6 +34,10 @@
         .form-group {
             margin-bottom: 20px;
         }
+           
+        input[readonly] {
+        background-color: #0707078c; 
+    }
         .btn-primary {
             display: block;
             width: 100%;
