minor title change

--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Header -->
-    <%- include('../partials/header.ejs', { title: 'Menu de opções do Motorista' }) %>
+    <%- include('../partials/header.ejs', { title: 'Adicionar Saída' }) %>
     <div class="container">
         <form action="javascript:salvarDados()" method="post">
             <div class="form-group">
