--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -72,7 +72,7 @@
 </head>
 <body>
     <!-- Header -->
-    <%- include('../partials/header.ejs', { title: 'Menu de opções do Motorista' }) %>
+    <%- include('../partials/header.ejs', { title: 'Adicionar Chegada' }) %>
     <div class="container">
         <form action="javascript:salvarDados()" method="post">
             <div class="form-group">
