--- a/public/assets/forms.css
+++ b/public/assets/forms.css
@@ -3,10 +3,14 @@ body, html {
     margin: 0;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(180deg, #00c3ff, #7e9eef);
+    background: linear-gradient(#56BC43, #43BCA9);
+    background-image: url('/assets/img/3greenDiarioBackground.png');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
 }
 .header, .footer {
-    background-color:linear-gradient(180deg, #0b264d, #eff6f6);
+    background-color:linear-gradient(180deg,#56BC43, #43BCA9);
     height: 50px; 
     line-height: 50px; 
     text-align: center; 
@@ -28,11 +32,12 @@ body, html {
 }
 
 input[readonly] {
-background-color: #2299ae8c; 
+background-color: #346c02; 
 }
 .btn-primary {
     display: block;
     width: 100%;
+    background-color: #346c02;
 }
 button[type="submit"], button[type="button"] {
     margin-bottom: 10px;
